production/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-angular-game-price-comparator-production-deployment
  labels:
    app: fe-angular-game-price-comparator-production
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: fe-angular-game-price-comparator-production
  template:
    metadata:
      labels:
        app: fe-angular-game-price-comparator-production
    spec:
      containers:
        - name: fe-angular-game-price-comparator-production
          image: 'docker.io/derreiskanzler/fe-angular-game-price-comparator-production:latest'
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
          imagePullPolicy: Always
          ports:
            - containerPort: 80
